--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,8 @@ body{
 }
 
 h2{
-  font-size: 5%;
+  font-size: 15px;
+  
 }
 
 
@@ -31,7 +32,7 @@ h2{
   margin-top: -50px;
   display:block ;
   padding: 2em;
-  height: 8%;
+  height: 6%;
   background-color: white;
   text-decoration: none;
   color: gray;
