--- a/src/styles.css
+++ b/src/styles.css
@@ -1,51 +1,55 @@
-body{
+.menu-container{
+  padding: 1%;
   background-color: black;
 }
 
-.Menu-Container{
-
-  padding: 2em;
-  background-color: white;
-}
-
-h2{
-  font-size: 15px;
-  
-}
-
-
-.Menu{
-  float:right;
-
-  
-  
-}
-
-.Menu ul{
+.menu ul{
+  padding: 0px;
+  margin: 0px;
   display: flex;
-  padding: 0%;
-  margin: 0%;
-  list-style: none;
 }
 
-.Menu a{
-  margin-top: -50px;
-  display:block ;
-  padding: 2em;
-  height: 6%;
-  background-color: white;
-  text-decoration: none;
-  color: gray;
+.menu {
+  padding: 0px;
+  margin: 0px;
+  display: flex;
+  float:right;
+  text-indent: 10px;
+  margin-top: -13px;
+  font-size: 13px;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
+.menu li{
+  list-style: none;
   
 }
 
-
-
-.Menu ul li ul{
-  display: none;
+.menu a{
+  color: gray;
+  text-decoration-line: none;
+  padding: 1em;
+  display: block;
 }
 
-.Menu ul li a:hover + ul, .Menu ul li ul:hover{
-  display: block;
+.menu a:hover{
+  color: white;
+  background-color: rgb(21, 21, 21);
+}
+
+.menu ul li ul{
+  display:none;
+}
+
+.menu li:hover .submenu{
+  display:block;
+  background-color: black;
+  color: rgb(21, 21, 21);
+  font-size: 13px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.Logo-Opper{
+  font-size: 10px;
+  color: gray;
 }
