--- a/src/styles.css
+++ b/src/styles.css
@@ -78,9 +78,18 @@ body {
   position: absolute;
 }
 
+.Login-Container h4{
+  position: absolute;
+  margin-top: 310px;
+  color: white;
+  font-family: 'MuseoModerno', cursive;
+  margin-left:35%;
+}
+
 .Button-Container button {
-  margin-top: 425px;
-  margin-left: 15px;
+  margin-top: 445px;
+  margin-left:20px;
+  text-align: center;
   border-radius: 15px;
   padding: 2px;
   width: 150px;
@@ -100,3 +109,13 @@ body {
   color:black;
   transition:2s;
 }
+
+.title-2 h2{
+  color: white;
+  font-family: 'MuseoModerno', cursive;
+  margin-top:195px;
+  text-align: center;  
+  position:absolute;
+  margin-left:40%;
+}
+
