--- a/src/styles.css
+++ b/src/styles.css
@@ -1,137 +1,9 @@
-body {
-  background-color: #401d76;
-  animation-duration: 5s;
-  animation-name: transcision;
+.nav-container{
+  padding: 20px;
+  height: 100%;
+  margin-right: 15px;
 }
 
-@keyframes transcision {
-  from {
-    opacity: 0.1;
-  }
+.nav-container h5{
+  margin-right: 15px;
 }
-
-.menu-container {
-  padding: 1%;
-  background-color: #401d76;
-}
-
-.menu ul {
-  padding: 0px;
-  margin: 0px;
-  display: flex;
-}
-
-.menu {
-  padding: 0px;
-  margin: 0px;
-  display: flex;
-  float: right;
-  text-indent: 10px;
-  margin-top: -13px;
-  font-size: 13px;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.menu li {
-  list-style: none;
-}
-
-.menu a {
-  color: white;
-  text-decoration-line: none;
-  padding: 1em;
-  display: block;
-}
-
-.menu a:hover {
-  color: white;
-  background-color: #4a2885;
-}
-
-.menu ul li ul {
-  display: none;
-}
-
-.menu li:hover .submenu {
-  display: block;
-  background-color: #473485;
-  color: rgb(21, 21, 21);
-  font-size: 13px;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.Logo-Opper {
-  font-family: "Faster One", cursive;
-  font-size: 15px;
-  color: white;
-  margin-top: -5px;
-  position: absolute;
-}
-
-.Login-Container h2 {
-  font-family: "Seaweed Script", cursive;
-  color: white;
-  font-size: 45px;
-  margin-top: 195px;
-  text-align: center;
-  margin-left: 35%;
-  position: absolute;
-}
-
-.Login-Container h4{
-  position: absolute;
-  margin-top: 310px;
-  color: white;
-  font-family: 'MuseoModerno', cursive;
-  margin-left:35%;
-}
-
-.Button-Container button {
-  margin-top: 445px;
-  margin-left:20px;
-  text-align: center;
-  border-radius: 15px;
-  padding: 2px;
-  width: 150px;
-  height:35px;
-  background-color: #4c2882;
-  border-color: white;
-  color:white;
-  
-}
-
-.Button-Container{
-  margin-left:38%;   
-}
-
-.Button-Container button:hover{
-  background-color: white;
-  color:black;
-  transition:2s;
-}
-
-.title-2 h2{
-  color: white;
-  font-family: 'MuseoModerno', cursive;
-  margin-top:220px;
-  text-align: center;  
-  position:absolute;
-  margin-left:40%;
-}
-
-.description-2 h4{
-  margin-top: 285px;
-  position: absolute;
-  margin-left: 20%;
-  color: white;
-  font-family: 'MuseoModerno', cursive;
-  padding: 8%;
-  width:40%;
-
-}
-
-.description-2 :hover{
-  background-color: #473485;
-
-}
-
